1.20.5 update
Throwing everything at the wall to see what sticks :3

- does not build
- several classes must be fixed (especially the ones master Crosby wrote)
- I am nt sure of my own work, please triple check everything
- this is a plea for help, the fog is coming